// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiComment testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--default euiCommentTimeline__icon--regular"
      >
        <span
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props event is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--default euiCommentTimeline__icon--regular"
      >
        <span
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        >
          commented
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props timelineIcon is rendered 1`] = `
.emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-background-size: cover;
  background-size: cover;
  text-align: center;
  vertical-align: middle;
  overflow-x: hidden;
  font-weight: 500;
  width: 40px;
  height: 40px;
  line-height: 40px;
  font-size: calc(24px * .8);
  border-radius: 50%;
}

<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--regular"
      >
        <div
          aria-label="Mario"
          class="euiAvatar euiAvatar--l euiAvatar--user emotion-0"
          role="img"
          style="background-color:#f1d86f;color:#000000"
          title="Mario"
        >
          <span
            aria-hidden="true"
          >
            M
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<div
  class="euiComment"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--default euiCommentTimeline__icon--regular"
      >
        <span
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
        <div
          class="euiCommentEvent__headerTimestamp"
        >
          <time>
            21 days ago
          </time>
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`EuiComment props type is rendered 1`] = `
<div
  class="euiComment euiComment--update"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--default euiCommentTimeline__icon--update"
      >
        <span
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="euiCommentEvent euiCommentEvent--update"
  >
    <div
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiComment renders a body 1`] = `
<div
  class="euiComment euiComment--hasBody"
>
  <div
    class="euiCommentTimeline"
  >
    <div
      class="euiCommentTimeline__content"
    >
      <div
        class="euiCommentTimeline__icon--default euiCommentTimeline__icon--regular"
      >
        <span
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="euiCommentEvent euiCommentEvent--regular"
  >
    <figcaption
      class="euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
    <div
      class="euiCommentEvent__body"
    >
      <p>
        This is the body.
      </p>
    </div>
  </figure>
</div>
`;
